<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.CloudProSalesApp.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.AppWidgetContainer"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/appwidget_incoming_activity_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/app_widget_incoming_activity_description"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/gray"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="6dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgrey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="10"
        >

        <!-- ListView to be shown on widget -->
        <ListView
            android:id="@+id/list_view_incoming_activity_widget"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="#FFFFFF"
            android:dividerHeight="0px"
            />

        <!-- Empty view is show if list items are empty -->
        <TextView
            android:id="@+id/empty_incoming_ticket_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/label_upcoming_activity_is_empty"
            android:textColor="#F44336"
            android:paddingHorizontal="24dp"
            android:textSize="16sp"
            android:visibility="gone"
            />
        <LinearLayout
            android:id="@+id/layout_incoming_ticket_sign_in"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"
            >
            <Button
                android:id="@+id/btn_incoming_ticket_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:textAllCaps="false"
                android:paddingHorizontal="24dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msg_login_to_view_incoming_activity"
                android:gravity="center"
                android:paddingHorizontal="24dp"
                android:textColor="@color/darkgray"
                android:textSize="14sp"
                android:paddingTop="6dp"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        >
        <TextView
            android:id="@+id/txt_incoming_activity_datetime_updated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textColor="@color/brown"
            android:textStyle="italic"
            android:textAlignment="center"
            android:gravity="center"
            />
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>